--- a/LeSA/style/style.css
+++ b/LeSA/style/style.css
@@ -1,3 +1,4 @@
+@media only screen and (max-device-width: 480px), only screen and (-webkit-min-device-pixel-ratio: 2) , screen and (-webkit-device-pixel-ratio:1.5){
 html {
 	--brand-green: #076448;
 --dark-green: #099268;
@@ -256,6 +257,7 @@ box-shadow: 0.25em  0.25em 0.25em 0.25em #868e96;
 margin-right: 1.625em; 
 text-align: left;
 text-align: justify;
+}
 }
 
 
